<resources>
    <string name="app_name">ASDADT8</string>
    <string name="ReviewDescription">Write Your Review</string>
    <string name="ReviewStars">Review Stars</string>
    <string name="ReviewCompany">Review Company</string>
    <string name="ReviewUser">Review User</string>
    <string name="ReviewJobTitle">Review Job Title</string>
    <string name="ReviewDate">Date format is 1999-12-22</string>
    <string name="CreateReview">Create</string>
    <string name="DeleteReview">Delete Review</string>
    <string name="GoToList">Go To List</string>
    <string name="ListAllRatings">List All Ratings</string>
</resources>